--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
 asgiref==3.5.2
+backports.zoneinfo==0.2.1
+cloudinary==1.30.0
 dj-database-url==1.0.0
 Django==4.1.3
 gunicorn==20.1.0
-psycopg2-binary==2.9.5
+oauthlib==3.2.2
+psycopg2==2.9.5
+PyJWT==2.6.0
+python3-openid==3.2.0
+requests-oauthlib==1.3.1
 sqlparse==0.4.3
