--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
-cloudinary==1.30.0
+boto3==1.26.12
+botocore==1.29.12
 dj-database-url==1.0.0
 Django==4.1.3
+django-storages==1.13.1
 gunicorn==20.1.0
-oauthlib==3.2.2
-psycopg2==2.9.5
-PyJWT==2.6.0
-python3-openid==3.2.0
-requests-oauthlib==1.3.1
+jmespath==1.0.1
+psycopg2-binary==2.9.5
+s3transfer==0.6.0
 sqlparse==0.4.3
