--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==4.1.3
 django-storages==1.13.1
 gunicorn==20.1.0
 jmespath==1.0.1
+Pillow==9.3.0
 psycopg2-binary==2.9.5
 s3transfer==0.6.0
 sqlparse==0.4.3
