--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ backports.zoneinfo==0.2.1
 boto3==1.26.12
 botocore==1.29.12
 dj-database-url==1.0.0
-Django==4.1.3
+Django==3.2.16
 django-allauth==0.51.0
 django-storages==1.13.1
 gunicorn==20.1.0
@@ -13,6 +13,7 @@ Pillow==9.3.0
 psycopg2-binary==2.9.5
 PyJWT==2.6.0
 python3-openid==3.2.0
+pytz==2022.7
 requests-oauthlib==1.3.1
 s3transfer==0.6.0
 sqlparse==0.4.3
