--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ botocore==1.29.12
 dj-database-url==1.0.0
 Django==3.2.16
 django-allauth==0.51.0
+django-multiupload==0.6.1
 django-storages==1.13.1
 gunicorn==20.1.0
 jmespath==1.0.1
